Style: Advanced Settings Layout begrenzt

--- a/css/settings.css
+++ b/css/settings.css
@@ -231,8 +231,12 @@
 }
 
 /* Advanced Settings Container */
+/* Advanced Settings Container */
 .advanced-settings {
     display: block;
+    max-width: 600px;
+    margin: 0 auto;
+    width: 100%;
 }
 
 /* ============================================
